--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
     -->
     <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Nathan Peters</title>
   </head>
   <body>
